<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
    <string name="menu_refresh">Ajouter</string>
    <string name="menu_location">Location</string>
    <string name="menu_settings">Settings</string>
    <string name="button_valider_repertoire">Tester</string>
    <string name="no_folder_message">Pas de répertoires</string>
    <string name="clean_filesWithoutVideo">Remove useless files</string>
    <string name="clean_videosamples">Remove samples</string>
    <string name="clean_recursefolders">Recurse folders</string>
    <string name="clean_emptyfolder">Remove empty folders</string>
    <string name="clean_namesreplacedotswithspaces">Replace \'.\' with spaces</string>
</resources>